# cgal-paraview-plugins

./: CMakeLists.txt  IsotropicRemeshingFilter.xml  README.md  vtkIsotropicRemeshingFilter.cxx  vtkIsotropicRemeshingFilter.h
.github/workflows/: ci.yml
Plugin/: CMakeLists.txt  IsotropicRemeshingFilter.plugin
Plugin/IsotropicRemeshingFilters/: CMakeLists.txt  IsotropicRemeshingFilter.xml  IsotropicRemeshingFiltersModule.h  vtk.module  vtkIsotropicRemeshingFilter.cxx  vtkIsotropicRemeshingFilter.h
data/: bull.vtp
